syntax = "proto3";

package email.service.movedletter;

import "models.proto";

option java_multiple_files = true;
option java_package        = "com.seeYaa.proto.email.service.movedletter";
option java_outer_classname = "MovedLetterServiceProto";

message EmailRequest { string email = 1; }
message MovedLetterList { repeated email.models.MovedLetter letters = 1; }

service MovedLetterService {
  rpc GetSpamLetters    (EmailRequest) returns (MovedLetterList);
  rpc GetGarbageLetters (EmailRequest) returns (MovedLetterList);
  rpc GetSentLetters (EmailRequest) returns (MovedLetterList);
  rpc GetInboxLetters (EmailRequest) returns (MovedLetterList);
}